change referencias a lit-switch por lit-switch-dos

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-  <a href="/dev/index.html">Lit Button Demo</a>
+  <a href="/dev/index.html">Lit SwitchDos Demo</a>
 </body>
 
 </html>
