--- a/dev/index.html
+++ b/dev/index.html
@@ -7,7 +7,7 @@
   <title>Lit Switch Demo</title>
   <script src="../node_modules/@webcomponents/webcomponentsjs/webcomponents-loader.js"></script>
   <script src="../node_modules/lit/polyfill-support.js"></script>
-  <script type="module" src="../lit-switch.js"></script>
+  <script type="module" src="../lit-switch-dos.js"></script>
 </head>
 
 <body>
